2010-06-04  Lluis Sanchez Gual  <lluis@novell.com>

	* templates/VBConsoleApplicationProject.xpt.xml: Set the
	  external console flag for console projects.

2010-05-05  Lluis Sanchez Gual  <lluis@novell.com>

	* VBNetBinding.addin.xml: Remove duplicated options section.

2010-05-05  Lluis Sanchez Gual  <lluis@novell.com>

	* VBNetBinding.addin.xml: Fix type reference. Fixes bug
	  #602452 - VB project options fail.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* VBNetBinding.addin.xml: Bumped MD version.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* VBNetBinding.csproj:
	* VBNetBinding.addin.xml:
	* Gui/ImportsOptionsPanel.cs:
	* Gui/ProjectOptionsPanel.cs:
	* VBBindingCompilerServices.cs:
	* Gui/ImportsOptionsPanelWidget.cs:
	* Gui/ConfigurationOptionsPanel.cs:
	* Gui/ProjectOptionsPanelWidget.cs:
	* Gui/ConfigurationOptionsPanelWidget.cs: Merged MD.Projects
	  into MD.Core, and MD.Projects.Gui, MD.Core.Gui and
	  MD.Components into MD.Ide.

2010-03-03  Michael Hutchinson  <mhutchinson@novell.com>

	* Project/VBNetResourceIdBuilder.cs: Track ProjectFile Link
	  API.

2010-03-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Parser/DomParser.cs: Use getter and setter modifiers.

2010-02-18  Lluis Sanchez Gual  <lluis@novell.com>

	* VBNetBinding.csproj: Flush.

2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/objects.xml:
	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.VBNetBinding.ProjectOptionsPanelWidget.cs:
	* gtk-gui/MonoDevelop.VBNetBinding.ImportsOptionsPanelWidget.cs:
	* gtk-gui/MonoDevelop.VBNetBinding.ConfigurationOptionsPanelWidget.cs:
	  Flush.

2009-12-21  Lluis Sanchez Gual  <lluis@novell.com>

	* templates/VBGtkSharp2Project.xpt.xml: Set correct assembly
	  target for gui projects.

2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* VBLanguageBinding.cs:
	* VBBindingCompilerServices.cs: Introduced the